# amp

./: .gitignore  Cargo.toml  Dioxus.toml  IMPLEMENTATION_SUMMARY.md  INJECTION_SCRIPT.md  README.md  STADSATLAS_MAP_FIX.md  TESTING_CHANGES.md  TUI_AUDIT_COMPLETE.md  TUI_ONLY_SUMMARY.md  adb-install.sh  adresser.json  build.sh  build_android.sh  build_server.sh  miljöparkering.json  pubspec.yaml  rust-toolchain.toml  sample.json  serve.sh
.cargo/: config.toml
.github/workflows/: android-test.yml  correlation-tests.yml
OLD/amp-api/: adresser.py  miljöparkering.py
OLD/amp-jsonfix/: Cargo.toml
OLD/src/: main.rs
amp-api/: miljöparkering.geojson
amp-correlation/: Cargo.toml
amp-correlation/src/: main.rs
amp-jsonfix/: Cargo.toml  adresser.parquet  miljöparkering.parquet
amp-jsonfix/src/: main.rs
android/: ARCHITECTURE.md  Cargo.toml  Dioxus.toml  TODO_IMPLEMENTATION.md
android/assets/: style.css
android/src/: countdown.rs  lib.rs  main.rs  matching.rs  state.rs  static_data.rs
android/src/ui/: adresser.rs  mod.rs  paneler.rs  topbar.rs
android/src/ui/assets/: dx-components-theme.css  style.css
android/src/ui/components/: mod.rs
android/src/ui/pages/: mod.rs
core/: CORRELATION_TESTS.md  Cargo.toml  MIGRATION_NOTES.md  README.md  TEST_QUICK_REFERENCE.md  THRESHOLD_ANALYSIS.md
core/src/: api.rs  correlation.rs  correlation_tests.rs  error.rs  geolocation.rs  lib.rs  models.rs  parquet.rs  state.rs  structs.rs
core/src/correlation_algorithms/: distance_based.rs  grid_nearest.rs  kdtree_spatial.rs  mod.rs  overlapping_chunks.rs  quadtree_spatial.rs  raycasting.rs  rtree_spatial.rs
core/tests/: integration_tests.rs
docs/: ANDROID_INTEGRATION.md  ANDROID_MVP_QUICK_START.md  ANDROID_MVP_STRUCTURE.md  API_ARCHITECTURE.md  BUILD_ANDROID_MVP.md  CORRELATION_ALGORITHM.md  CORRELATION_ALGORITHMS.md  PARQUET_INTEGRATION.md  SETUP_STATIC_DATA.md  TUI_GUIDE.md  USAGE.md  algorithms.md  api-integration.md  architecture.md  cli-usage.md  implementation-notes.md  testing.md
gradle/android/: build.gradle  gradle.properties  settings.gradle
gradle/android/app/: build.gradle
gradle/android/app/src/main/: AndroidManifest.xml
gradle/android/app/src/main/java/com/example/amp/: MainActivity.java
gradle/android/app/src/main/res/layout/: activity_main.xml
gradle/android/app/src/main/res/values/: strings.xml
ios/src/ui/: mod.rs
py-bridge/: Cargo.toml
py-bridge/python/: amp_api_pull.py
py-bridge/src/: lib.rs
server/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  REBUILD_NOTES.md  checksums.json  correlation_results.parquet
server/src/: app.rs  classification.rs  config.rs  injection.html  main.rs  python_bridge.rs  scheduler.rs  tui.rs  ui.rs
server/src/api/: handlers.rs
server/src/assets/: origo_map.html  stadsatlas_interface.css  stadsatlas_interface.html  stadsatlas_interface.js
src/: api.rs  correlation.rs  main.rs
tests/: integration_tests.rs
