[workspace]
members = ["core", "android"]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2024"
authors = ["Albin Sjögren <albin@malmo.skaggbyran.se>"]
license = "GPL-3"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.33", features = ["serde"] }
parking_lot = "0.12"
lazy_static = "1.4"
jni = "0.21"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1
