[package]
name = "amp-android"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
amp-core = { path = "../core" }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
jni = "0.21"
lazy_static = { workspace = true }

[profile.release]
opt-level = 3
lto = true
