[package]
name = "amp-android"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
amp-core = { path = "../core" }
dioxus.workspace = true
serde.workspace = true
serde_json.workspace = true
rust_decimal.workspace = true
dioxus-logger.workspace = true
dioxus-primitives.workspace = true

[features]
default = ["mobile"]
desktop = ["dioxus/desktop"]
web = ["dioxus/web"]
mobile = ["dioxus/mobile"]

[[bin]]
name = "amp"
path = "src/main.rs"
