[package]
name = "amp-core"
version.workspace = true
edition = "2021"
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
