[package]
name = "amp-py-bridge"
version.workspace = true
edition.workspace = true

[lib]
name = "amp_api_pull"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
amp-core = { path = "../core" }

[profile.release]
opt-level = 3
lto = true
