[package]
name = "amp-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "amp-server"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { workspace = true }
rust_decimal = { workspace = true }
sha2 = "0.10"
parking_lot = "0.12"
dotenvy = "0.15"
arc-swap = "1.6"
amp-core = { path = "../core" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
