[package]
name = "amp-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "amp-server"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
rust_decimal = { workspace = true }
sha2 = { workspace = true }
parking_lot = { workspace = true }
dotenvy = { workspace = true }
uuid = { workspace = true }
amp-core = { path = "../core" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
